<resources>
    <string name="app_name">AtleticoHFC</string>
    <string name="textWelcomeLogin">Você faz parte deste time!</string>
    <string name="textoBotaoLogin">Entrar</string>
    <string name="textoBemVindo">Bem vindo!</string>
    <string name="text_username"></string>
    <string name="txtRanking">Ranking de jogadores</string>
    <string name="btnEventos">Calendário de Eventos</string>
    <string name="textBtnNovoMembro">Cadastrar Membro</string>
    <string name="textBtnNovoEvento">Cadastrar Evento</string>
    <string name="txtLogout">Sair</string>
    <string name="hint_nome">Nome completo</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_email">E-mail</string>
    <string name="textRadiusMembro">Membro</string>
    <string name="textRadiusAdmin">Administrador</string>
    <string name="textBtnRegister">Cadastrar</string>
    <string name="eventos">Eventos</string>
    <string name="img_logo">Logo</string>
    <string name="frequentadores">Frequentadores</string>
    <string name="menores">Menores</string>
    <string name="maiores">Maiores</string>
    <string name="alterar_email">Alterar E-mail</string>
    <string name="alterar_nome">Alterar Nome</string>
    <string name="alterar_senha">Alterar Senha</string>
    <string name="img_logo_welcome">img_logo_welcome</string>
    <string name="txtTituloEvento">Título do Evento</string>
    <string name="txtDataEvento">Data</string>
    <string name="txtLocalEvento">Local</string>
    <string name="txtHoraEvento">Horário</string>
    <string name="txtNovoEvento">Cadastro de Eventos</string>
    <string name="txtTituloMais">Jogadores mais participativos</string>
    <string name="txtTituloMenos">Jogadores menos participativos</string>
    <string name="btnEditaDados">Confirmar</string>
    <string name="btnShare">Enviar via WhatsApp</string>
    <string name="txtAlertaAlteraSenha">O link para redefinição de senha foi enviado para o seu e-mail!</string>

</resources>
