<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil">

    <TextView
        android:id="@+id/txt_emailPerfil"
        android:layout_width="231dp"
        android:layout_height="50dp"
        android:layout_marginTop="460dp"
        android:layout_marginBottom="216dp"
        android:text="@string/hint_email"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/img_perfil"
        android:layout_width="182dp"
        android:layout_height="253dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_nomePerfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/atletico" />

    <TextView
        android:id="@+id/txt_nomePerfil"
        android:layout_width="231dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:text="@string/hint_nome"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_emailPerfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_alterarSenha"
        android:layout_width="160dp"
        android:layout_height="47dp"
        android:text="@string/alterar_senha"
        app:backgroundTint="@color/MeuOutroVermelho"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_emailPerfil"
        app:layout_constraintVertical_bias="0.236" />

    <Button
        android:id="@+id/btn_alterarEmail"
        android:layout_width="160dp"
        android:layout_height="47dp"
        android:text="@string/alterar_email"
        app:backgroundTint="@color/MeuOutroVermelho"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_alterarSenha"
        app:layout_constraintVertical_bias="0.191" />

</androidx.constraintlayout.widget.ConstraintLayout>